--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
-name: TechnoBoard
-main: TechnoBoard\Main
+name: TecnoBoard
+main: TecnoBoard\Main
 api: [3.0.0, 3.2.0, 4.0.0]
 version: 1.0.0
 author: HADI_KING
